# tesseract_ikgeo

./: .gitmodules  CMakeLists.txt  README.md  colcon.pkg  package.xml
tesseract_kinematics/ikgeo/: CMakeLists.txt
tesseract_kinematics/ikgeo/include/tesseract_kinematics/ikgeo/: ikgeo_factory.h  ikgeo_inv_kin.h
tesseract_kinematics/ikgeo/src/: ikgeo_factory.cpp  ikgeo_inv_kin_chain.cpp
test/: CMakeLists.txt  ikgeo_unit.cpp
urdf/: abb_irb2400_ikgeo.srdf  abb_irb2400_plugins_ikgeo.yaml
