<?xml version="1.0"?>
<package format="3">
  <name>tesseract_ikgeo</name>
  <version>0.1.0</version>
  <description>ikgeo plugin for Tesseract</description>
  <maintainer email="wason@wasontech.com">John Wason</maintainer>
  <license>Apache 2.0</license>
  <author>John Wason</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>boost_plugin_loader</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_state_solver</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>
  <test_depend>tesseract_urdf</test_depend>
  <test_depend>liblapack-dev</test_depend>
  <test_depend>tesseract_environment</test_depend>
  <test_depend>libomp-dev</test_depend>

  <test_depend>libpcl-all-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>